--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
 
     //Material Design
     implementation "com.google.android.material:material:1.4.0"
@@ -82,7 +83,9 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
 
     //Dagger
     implementation "com.google.dagger:dagger:$hiltAndroidVersion"
@@ -96,13 +99,17 @@ dependencies {
     //Google Maps
     implementation "com.google.android.gms:play-services-maps:17.0.1"
     implementation "com.google.maps.android:android-maps-utils:2.2.6"
-    implementation "com.google.android.libraries.places:places:2.4.0"
+    implementation "com.google.android.libraries.places:places:2.5.0"
+    implementation "com.android.volley:volley:1.2.1"
 
     //Lottie
     implementation "com.airbnb.android:lottie:4.0.0"
 
     //Easy permissions
     implementation "pub.devrel:easypermissions:3.0.0"
+
+    // Easy Permissions
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
     //Coil Image loading
     implementation "io.coil-kt:coil:1.3.2"
